[gd_scene load_steps=2 format=2]

[ext_resource path="res://towers/tower1/scripts/TowerPanel.gd" type="Script" id=1]

[node name="TowerPanel" type="Node2D"]
visible = false
light_mask = 0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
light_mask = 0
margin_right = 275.0
margin_bottom = 150.0
rect_min_size = Vector2( 275, 195 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="Panel"]
light_mask = 0
margin_left = 20.0
margin_top = 10.0
margin_right = 255.0
margin_bottom = 140.0
rect_min_size = Vector2( 100, 50 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TowerNameLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_right = 235.0
margin_bottom = 14.0
rect_min_size = Vector2( 115, 0 )
text = "Name: "

[node name="TowerExpLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 18.0
margin_right = 235.0
margin_bottom = 32.0
rect_min_size = Vector2( 115, 0 )
text = "Exp:"

[node name="EmptyLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 36.0
margin_right = 235.0
margin_bottom = 50.0

[node name="TowerDamageLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 54.0
margin_right = 235.0
margin_bottom = 68.0
text = "Damage:"

[node name="TowerRangeLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 72.0
margin_right = 235.0
margin_bottom = 86.0
text = "Radius:"

[node name="TowerReloadTimeLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 90.0
margin_right = 235.0
margin_bottom = 104.0
text = "Reload time:"

[node name="TowerPierceLabel" type="Label" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 108.0
margin_right = 235.0
margin_bottom = 122.0
text = "Pierce:"

[node name="HBoxContainer" type="HBoxContainer" parent="Panel/VBoxContainer"]
light_mask = 0
margin_top = 126.0
margin_right = 235.0
margin_bottom = 176.0
rect_min_size = Vector2( 125, 0 )

[node name="Button" type="Button" parent="Panel/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_right = 115.0
margin_bottom = 50.0
rect_min_size = Vector2( 115, 50 )
text = "Upgrade Tower"

[node name="VBoxContainer" type="VBoxContainer" parent="Panel/VBoxContainer/HBoxContainer"]
light_mask = 0
margin_left = 119.0
margin_right = 234.0
margin_bottom = 50.0
rect_min_size = Vector2( 115, 0 )

[node name="RequiredLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 0
margin_right = 115.0
margin_bottom = 14.0
text = "Required:"

[node name="ExpRequiredLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 0
margin_top = 18.0
margin_right = 115.0
margin_bottom = 32.0
text = "Exp:"

[node name="GoldRequiredLabel" type="Label" parent="Panel/VBoxContainer/HBoxContainer/VBoxContainer"]
light_mask = 0
margin_top = 36.0
margin_right = 115.0
margin_bottom = 50.0
text = "Gold:"

[node name="DeleteTowerButton" type="Button" parent="."]
light_mask = 0
margin_left = 255.0
margin_right = 275.0
margin_bottom = 20.0
rect_min_size = Vector2( 20, 20 )
text = "X"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="mouse_entered" from="Panel" to="." method="_on_Panel_mouse_entered"]
[connection signal="mouse_exited" from="Panel" to="." method="_on_Panel_mouse_exited"]
[connection signal="pressed" from="DeleteTowerButton" to="." method="_on_DeleteTowerButton_pressed"]
